--- a/css/p-accueil.css
+++ b/css/p-accueil.css
@@ -367,13 +367,25 @@ body.menu-active #menu.four {
 }
 
 #matchs h1 {
-  font-family: "Futura Condensed Extra Bold";
   font-size: 6.5vh;
-  color: #000;
-  margin-bottom: 20vh;
   text-align: center;
   position: absolute;
   transform: translateY(-130%);
+}
+.dot {
+  position: relative;
+  color: #000; /* Couleur du "i" */
+  font-family: "Futura Condensed Extra Bold";
+  font-style: normal;
+}
+
+.dot::after {
+  content: "•";
+  color: var(--main-color);
+  position: absolute;
+  top: -0.17em;
+  left: 0.02em;
+  font-size: 0.65em;
 }
 
 #previous,
