--- a/css/p-planning.css
+++ b/css/p-planning.css
@@ -41,7 +41,7 @@ img-container:hover img {
 }
 
 /*-----Coach-----*/
-.coach-container {
+#member {
   width: 100%;
   background: url(../img/banner-coach.JPG);
   background-repeat: no-repeat;
@@ -73,6 +73,7 @@ img-container:hover img {
   transition: transform 0.1s linear;
   margin-top: 50px;
 }
+
 .wrapper i:active {
   transform: translateY(-50%) scale(0.85);
 }
