--- a/css/components.css
+++ b/css/components.css
@@ -172,8 +172,9 @@ footer {
   justify-content: center;
   gap: 40px;
   padding: 0 20px;
-  padding-top: 40px;
-  margin-bottom: 5vmin;
+  padding-top: 60px;
+  margin-bottom: 12vmin;
+  margin-top: 16vmin + 60px;
 }
 
 /* Nouvelle box pour le centrage */
