--- a/css/components.css
+++ b/css/components.css
@@ -247,6 +247,23 @@ footer {
   border-top: 2px solid rgba(255, 255, 255, 0.1);
   padding: 0 50px;
 }
+.bottom-footer::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  background-image: url("../img/ResNonVerba1.svg");
+  filter: brightness(0) invert(1) drop-shadow(0 0 2px rgba(255, 255, 255, 0.8)); /* Ajout d'un effet lumineux */
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 1;
+  z-index: 1;
+}
 
 .social-icon-container {
   display: flex;
