--- a/css/components.css
+++ b/css/components.css
@@ -1,26 +1,86 @@
-/*----HEADER----*/
+/* TITLES */
+.titre {
+  font-family: "Futura Condensed Extra Bold", sans-serif;
+  font-size: 5vh;
+  color: #000;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+.titre span {
+  font-family: inherit;
+  font-size: inherit;
+  text-shadow: inherit;
+  background-image: linear-gradient(to bottom, var(--main-color2), var(--main-color2));
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+@media (max-width: 768px) {
+  .titre {
+    text-shadow: none;
+  }
+}
+
+.soustitre {
+  font-size: 2.5vh;
+  font-family: "Inter", "Montserrat", sans-serif;
+  letter-spacing: 0.15em;
+  margin-bottom: 2vh;
+  padding: 1vh 2.5vh;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  color: #333;
+}
+
+.soustitre span {
+  background-image: linear-gradient(to bottom, var(--main-color), var(--main-color2));
+  background-clip: text;
+  color: transparent;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+/* text-style */
+.inter-bold {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.inter-light {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
+/* HEADER */
 header {
   background: url(../img/griffes-head.png);
   background-repeat: no-repeat;
   background-position: top right;
   background-size: 180px;
 }
-/*--socials--*/
+
+/* socials */
 .socialmedia {
   width: auto;
   margin-left: 5px;
 }
+
 .socialmedia .icon {
   padding: 1px;
   width: 24px;
 }
 
-/*--logo--*/
+/* logo */
 .logo-container-header {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .logo {
   width: 95px;
   margin-bottom: 5px;
@@ -28,19 +88,20 @@ header {
   filter: drop-shadow(0 0 0.5rem #640a34);
 }
 
-/*--navbar--*/
+/* navbar */
 .navcontainer {
   display: flex;
   justify-content: space-around;
   background-color: transparent;
 }
+
 .navcontainer li {
   display: inline-block;
   vertical-align: top;
   position: relative;
 }
+
 .navcontainer li a {
-  display: block;
   padding: 25px;
   color: black;
   font-family: Georgia, serif;
@@ -50,7 +111,7 @@ header {
   transform: skew(-11.5deg);
 }
 
-/* Sous-menu */
+/* sous-menu */
 .navcontainer .menu > li > .sub-menu {
   display: none;
   position: absolute;
@@ -61,9 +122,11 @@ header {
   border: 1px solid black;
   transform: skew(-11.5deg);
 }
+
 .sub-menu li {
   display: block;
 }
+
 .sub-menu li a {
   color: black;
   padding: 15px;
@@ -73,10 +136,12 @@ header {
   justify-content: center;
   transform: skew(0deg);
 }
+
 .sub-menu li a:hover {
   background-color: var(--main-color);
   color: #fff;
 }
+
 .second-sub-menu {
   display: none;
   position: absolute;
@@ -87,22 +152,27 @@ header {
   border: 1px solid black;
   z-index: 12;
 }
+
 .second-sub-menu li a {
   color: black;
   text-align: center;
   position: relative;
   transform: skew(0deg);
 }
+
 .navcontainer li:hover > .sub-menu {
   display: block;
 }
+
 .sub-menu li:hover > .second-sub-menu {
   display: block;
 }
+
 .navcontainer .main-point:hover {
   color: var(--main-color);
   transition-delay: 0.1s;
 }
+
 .navcontainer .main-point {
   position: relative;
   padding: 25px;
@@ -115,7 +185,7 @@ header {
   transition: color 0.3s ease;
 }
 
-/* Barre de survol */
+/* barre-survol */
 .navcontainer .main-point::after {
   content: "";
   position: absolute;
@@ -127,15 +197,17 @@ header {
   transition: width 0.3s ease, left 0.3s ease;
   transform: translateX(-50%);
 }
+
 .navcontainer .main-point:hover {
   color: var(--main-color);
 }
+
 .navcontainer .main-point:hover::after {
   width: 65%;
   left: 50%;
 }
 
-/*----FOOTER----*/
+/* FOOTER */
 footer {
   position: relative;
   color: #fff;
@@ -150,7 +222,7 @@ footer {
   margin-top: 10vh;
 }
 
-/*--logo footer--*/
+/* logo-footer */
 .logocontainer-footer {
   position: absolute;
   display: flex;
@@ -160,12 +232,13 @@ footer {
   left: 50%;
   transform: translateX(-50%);
 }
+
 #logo-footer {
   width: 95px;
   filter: drop-shadow(0 0 0.5rem var(--main-color));
 }
 
-/*--Contenu footer--*/
+/* content */
 .footer-container {
   display: flex;
   flex-wrap: wrap;
@@ -177,7 +250,6 @@ footer {
   margin-top: 16vmin + 60px;
 }
 
-/* Nouvelle box pour le centrage */
 .footer-section-wrapper {
   flex: 0 1 225px;
   display: flex;
@@ -213,16 +285,13 @@ footer {
 .footer-section ul li {
   margin-bottom: 10px;
 }
-
 .footer-section ul li a {
   text-decoration: none;
   color: #d5cbcb;
 }
-
 .footer-section ul li a:hover {
   color: white;
 }
-
 .hr-footer {
   width: 50%;
   margin-top: 5px;
@@ -233,7 +302,7 @@ footer {
   height: 15px;
 }
 
-/*--bottom footer--*/
+/* bottom-footer */
 .bottom-footer {
   position: absolute;
   bottom: 0;
@@ -255,9 +324,8 @@ footer {
   transform: translate(-50%, -50%);
   width: 50px;
   height: 50px;
-  background-image: url("../img/ResNonVerba1.svg");
-  filter: brightness(0) invert(1) drop-shadow(0 0 2px rgba(255, 255, 255, 0.8)); /* Ajout d'un effet lumineux */
-
+  background-image: url("../img/resnonverba1.svg");
+  filter: brightness(0) invert(1) drop-shadow(0 0 2px rgba(255, 255, 255, 0.8));
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -265,11 +333,13 @@ footer {
   z-index: 1;
 }
 
+/* socials */
 .social-icon-container {
   display: flex;
   gap: 20px;
   align-items: center;
 }
+
 .social-icon {
   display: inline-flex;
   align-items: center;
@@ -281,6 +351,7 @@ footer {
   background-color: white;
   transition: 0.3s ease;
 }
+
 .social-icon:hover {
   background-color: #d5d5d5;
 }
@@ -294,6 +365,7 @@ footer {
   width: 24px;
   height: 24px;
 }
+
 @media (max-width: 725px) {
   .bottom-footer {
     flex-direction: column;
@@ -316,61 +388,8 @@ footer {
     margin-bottom: 20vmin;
   }
 }
-/*--TITLES--*/
-.titre {
-  font-family: "Futura Condensed Extra Bold", sans-serif;
-  font-size: 5vh;
-  color: #000;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-}
-.titre span {
-  font-family: inherit;
-  font-size: inherit;
-  text-shadow: inherit;
-  background-image: linear-gradient(to bottom, var(--main-color2), var(--main-color2));
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-}
-@media (max-width: 768px) {
-  .titre {
-    text-shadow: none;
-  }
-}
 
-.soustitre {
-  font-size: 2.5vh;
-  font-family: "Inter", "Montserrat", sans-serif;
-  letter-spacing: 0.15em;
-  margin-bottom: 2vh;
-  padding: 1vh 2.5vh;
-  font-weight: bold;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  color: #333;
-}
-
-.soustitre span {
-  background-image: linear-gradient(to bottom, var(--main-color), var(--main-color2));
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-}
-
-.inter-bold {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: normal;
-}
-.inter-light {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
-}
-
-/*--RES NON VERBA BG*/
+/* RNV-BG */
 .repeated-background {
   width: 100%;
   height: 2000px;
@@ -381,7 +400,7 @@ footer {
   filter: grayscale(100%);
 }
 
-/* button for cart and planning */
+/* BUTTON */
 #boutique .cart-button-container {
   position: absolute;
   top: -2.5rem;
@@ -433,6 +452,7 @@ footer {
   height: 24px;
   transition: all 0.5s ease-in-out;
 }
+
 .button-with-icon #calendar-icon {
   transition: all 0.5s ease-in-out;
   font-size: 25px;
@@ -449,24 +469,102 @@ footer {
 .button-with-icon:hover #cart-icon {
   transform: translate(28px);
 }
+
 .button-with-icon:hover #calendar-icon {
   transform: translate(38px);
 }
 
 .text {
   transition: all 0.5s ease-in-out;
-}
-
-/* Passage à 2x2 */
-@media (max-width: 1200px) {
   .footer-container {
-    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 20vmin;
   }
 }
 
-/* Version mobile */
-@media (max-width: 700px) {
-  .footer-container {
-    grid-template-columns: 1fr;
-  }
+/* RNV-BG */
+.repeated-background {
+  width: 100%;
+  height: 2000px;
+  background-image: url("img/ResNonVerbaInclinedOpacity.svg"), url("img/ResNonVerbaInclinedOpacity.svg");
+  background-repeat: repeat;
+  background-size: 170px 170px;
+  background-position: 0 0, 85px 85px;
+  filter: grayscale(100%);
+}
+
+/* BUTTON */
+#boutique .cart-button-container {
+  position: absolute;
+  top: -2.5rem;
+  right: -1rem;
+  z-index: 10;
+}
+#cart-icon {
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin: 0 auto;
+}
+
+.button-with-icon {
+  overflow: hidden;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--main-color);
+  font-family: "Istok Web", sans-serif;
+  letter-spacing: 1px;
+  padding: 12px 12px;
+  text-align: center;
+  width: 120px;
+  height: 40px;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: normal;
+  border-radius: 3px;
+  outline: none;
+  user-select: none;
+  cursor: pointer;
+  transform: translateY(0px);
+  position: relative;
+  box-shadow: inset 0 30px 30px -15px rgba(100, 10, 52, 0.1), inset 0 0 0 1px rgba(100, 10, 52, 0.3),
+    inset 0 1px 20px rgba(100, 10, 52, 0.2), 0 3px 0 rgba(100, 10, 52, 0.8), 0 3px 2px rgba(100, 10, 52, 0.3),
+    0 5px 10px rgba(100, 10, 52, 0.2), 0 10px 20px rgba(100, 10, 52, 0.1);
+  background: var(--main-color2);
+  color: white;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
+  transition: 150ms all ease-in-out;
+  float: right;
+  margin-right: 4vh;
+}
+
+.button-with-icon #cart-icon {
+  margin-right: 8px;
+  width: 24px;
+  height: 24px;
+  transition: all 0.5s ease-in-out;
+}
+
+.button-with-icon #calendar-icon {
+  transition: all 0.5s ease-in-out;
+  font-size: 25px;
+}
+
+.button-with-icon:active {
+  transform: translateY(3px);
+}
+
+.button-with-icon:hover .text {
+  transform: translateX(85px);
+}
+
+.button-with-icon:hover #cart-icon {
+  transform: translate(28px);
+}
+
+.button-with-icon:hover #calendar-icon {
+  transform: translate(38px);
+}
+
+.text {
+  transition: all 0.5s ease-in-out;
 }
