--- a/css/layout.css
+++ b/css/layout.css
@@ -1,30 +1,37 @@
-/* ALL*/
+/* ALL */
 footer {
   position: relative;
   width: 100%;
   padding: 40px 0;
 }
+
 header {
   height: 30%;
   background-color: white;
 }
-/* HOME PAGE */
+
+/* HOME-PAGE */
 #index-page {
   background: linear-gradient(to bottom, white, #f5f5f5);
   overflow-x: hidden;
 }
+
 #index-page nav {
   padding: 0;
 }
+
 #index-page main {
   padding: 0;
 }
+
 #index-page figure .banniere-container {
   padding: auto;
 }
+
 #index-page section .wraps {
   padding: 0;
 }
+
 #index-page section .matchs {
   padding: auto;
 }
