--- a/css/p-boutique.css
+++ b/css/p-boutique.css
@@ -8,18 +8,17 @@ body {
   justify-content: center;
   margin: 6vh 0;
 }
+
 .title h2 {
   font-size: 6vh;
 }
 
-/*--SHOP CONTENT--*/
-/* Conteneur principal */
+/* SHOP CONTENT*/
 #boutique {
   margin: 0 2vh;
   position: relative;
 }
 
-/* Grille des produits */
 .shop-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -28,7 +27,6 @@ body {
   justify-content: center;
 }
 
-/* Style des boîtes de produit */
 .product-box {
   background-color: #fff;
   border: 1px solid #ddd;
@@ -51,7 +49,6 @@ body {
   cursor: pointer;
 }
 
-/* Images des produits */
 .product-img {
   max-width: 100%;
   max-height: 28vh;
@@ -87,7 +84,7 @@ body {
   font-size: 24px;
   color: black;
   cursor: pointer;
-  position: absolute; /* Positionnement dans le coin inférieur droit */
+  position: absolute;
   bottom: 10px;
   right: 10px;
   background-color: #fff;
@@ -104,7 +101,7 @@ body {
   transform: scale(1.1);
 }
 
-/*--Cart--*/
+/* Cart */
 .cart {
   position: fixed;
   top: 0;
@@ -117,15 +114,18 @@ body {
   transition: 0.3s;
   z-index: 100;
 }
+
 .cart.active {
   right: 0;
 }
+
 .cart-title {
   text-align: center;
   font-size: 1.5rem;
   font-weight: 600;
   margin-top: 2rem;
 }
+
 .cart-box {
   display: grid;
   grid-template-columns: 32% 50% 18%;
@@ -133,23 +133,28 @@ body {
   gap: 1rem;
   margin-top: 1rem;
 }
+
 .cart-img {
   width: 100px;
   height: 100px;
   object-fit: contain;
   padding: 10px;
 }
+
 .detail-box {
   display: grid;
   row-gap: 0.5rem;
 }
+
 .cart-product-title {
   font-size: 1rem;
   text-transform: uppercase;
 }
+
 .cart-price {
   font-weight: 500;
 }
+
 .cart-quantity {
   border: 1px solid var(--text-color);
   outline-color: var(--main-color);
@@ -157,24 +162,29 @@ body {
   text-align: center;
   font-size: 1rem;
 }
+
 .cart-remove {
   font-size: 24px;
   color: var(--main-color);
   cursor: pointer;
 }
+
 .total {
   display: flex;
   justify-content: flex-end;
   margin-top: 1.5rem;
   border-top: 1px solid var(--text-color);
 }
+
 .total-title {
   font-size: 1rem;
   font-weight: 600;
 }
+
 .total-price {
   margin-left: 0.5rem;
 }
+
 .btn-buy {
   display: flex;
   margin: 1.5rem auto 0 auto;
@@ -186,9 +196,11 @@ body {
   font-weight: 500;
   cursor: pointer;
 }
+
 .btn-buy:hover {
   background: var(--text-color);
 }
+
 #close-cart {
   position: absolute;
   top: 1rem;
