--- a/css/p-events.css
+++ b/css/p-events.css
@@ -1,14 +1,16 @@
-/*------EVENEMENTS-----*/
+/* EVENEMENTS */
 h2 {
   font-size: 6vh !important;
   text-align: center;
   margin: 5vh 0;
 }
-/*--Filtre--*/
+
+/* Filtre */
 .filtrer-image {
   width: 85%;
   margin: 0 auto;
 }
+
 .filtrer-image ul {
   width: 100%;
   display: flex;
@@ -19,6 +21,7 @@ h2 {
   box-sizing: border-box;
   margin-bottom: 10px;
 }
+
 .filtrer-image ul li {
   list-style: none;
   background-color: rgba(255, 255, 255, 0.5);
@@ -28,10 +31,12 @@ h2 {
   cursor: pointer;
   font-size: 1.2em;
 }
+
 .filtrer-image ul li.active {
   background-color: var(--main-color);
   color: whitesmoke;
 }
+
 .product {
   width: 100%;
   padding: 0 10px;
@@ -39,6 +44,7 @@ h2 {
   justify-content: center;
   flex-wrap: wrap;
 }
+
 .product img {
   width: 400px;
   height: 300px;
@@ -46,6 +52,7 @@ h2 {
   border-radius: 10%;
   border: 4px solid var(--main-color);
 }
+
 /*--Annonces du club--*/
 .event {
   display: flex;
@@ -54,12 +61,14 @@ h2 {
   margin-bottom: 100px;
   margin-top: 50px;
 }
+
 .img-event {
   width: 500px;
   margin: 20px;
   border: 3px solid var(--main-color);
   border-radius: 10%;
 }
+
 .planning {
   margin: 20px;
   padding: 40px;
@@ -70,6 +79,7 @@ h2 {
   font-weight: 600;
   word-spacing: 4px;
 }
+
 .social-contact {
   display: flex;
   margin: 0 auto;
