--- a/css/p-projets.css
+++ b/css/p-projets.css
@@ -18,10 +18,9 @@
 }
 
 .titre span {
-  color: var(--secondary-color);
+  color: var(--main-color2);
 }
 
-/* Structure des projets */
 .project {
   display: flex;
   justify-content: space-between;
@@ -60,7 +59,6 @@
   text-align: justify;
 }
 
-/* Responsive */
 @media (max-width: 900px) {
   .project {
     flex-direction: column;
